--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </form>
 
         </td>
-        <td>Description 2</td>
+        <td>In this stage we created the first UN goal with a flipbox and a question about the topic on the other side.</td>
       </tr>
      
       <tr>
@@ -73,7 +73,7 @@
       </form>
 
         </td>
-        <td>Description 3</td>
+        <td>In this stage we added all the other UN goals with flipboxes and questions on the other side.</td>
       </tr>
 
       <tr>
@@ -85,7 +85,7 @@
       </form>
 
         </td>
-        <td>Description 4</td>
+        <td>In this stage we moved the UN goals into rows of 4 and added a light blue background. </td>
       </tr>
 
       <tr>
@@ -97,7 +97,7 @@
       </form>
 
         </td>
-        <td>Description 5</td>
+        <td>In this stage we made it so that you could see all of the goals no matter how big your screen was.</td>
       </tr>
 
       <tr>
@@ -109,7 +109,7 @@
       </form>
 
         </td>
-        <td>Description 6</td>
+        <td>In this stage we added a fixed header with the UN sustainable goals logo. </td>
       </tr>
 
       <tr>
@@ -121,7 +121,7 @@
       </form>
 
         </td>
-        <td>Description 7</td>
+        <td>In this stage we added a home button that took you to your github site</td>
       </tr>
      
     </table>
