--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </form>
 
         </td>
-        <td>Description 2</td>
+        <td>In this Stage we continued the development process for this activity</td>
       </tr>
      
       <tr>
