--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </form>
 
         </td>
-        <td>Description 3</td>
+        <td>In this stage we were working on how to access the data</td>
       </tr>
 
       <tr>
@@ -182,7 +182,7 @@
       </form>
 
         </td>
-        <td>Description 4</td>
+        <td>In this stage we worked on manipulating the data using string manipulation and math</td>
       </tr>
 
       <tr>
@@ -200,7 +200,7 @@
       </form>
 
         </td>
-        <td>Description 5</td>
+        <td>In this stage we were accessing the data using loop structures.</td>
       </tr>
 
       <tr>
@@ -212,7 +212,7 @@
       </form>
 
         </td>
-        <td>Description 6</td>
+        <td>In this stage we just cleaned everything and fixed anything that looked wrong.</td>
       </tr>
 
       <tr>
